fastapi/fastapi_deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-fastapi
  labels:
    app: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: python-fastapi
        image: rabii10/python_fastapi:v1.1
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  labels:
    app: fastapi
spec:
  type: ClusterIP
  selector:
    app: fastapi
  ports:
    - name: fastapi-webhook
      port: 8000
      targetPort: 8000
